# esp32-balboa-spa

./: .gitignore  Cargo.toml  README.md  sdkconfig.defaults
.cargo/: config.toml
balboa-spa-messages/: Cargo.toml  README.md
balboa-spa-messages/src/: array_utils.rs  channel.rs  frame_decoder.rs  frame_encoder.rs  framed_reader.rs  framed_writer.rs  framing.rs  lib.rs  message.rs  message_types.rs  parsed_enum.rs  ring_buffer.rs  serial_framing.rs  temperature.rs  time.rs
balboa-spa-protocol/: Cargo.toml  README.md  build.rs
balboa-spa-protocol/src/: lib.rs  main_board.rs  message_logger.rs  mock_spa.rs  timer.rs  transport.rs
balboa-spa-protocol/tests/: CircularBuffer.tpp  esp8266_spa.cpp  mainboard_message_test.rs  mainboard_message_tests.rs  mainboard_with_esp8266_spa_tests.rs
balboa-tools/: Cargo.toml
common-lib/: Cargo.toml  lv_conf.h
common-lib/src/: bus_transport.rs  channel_allocator_broker.rs  channel_filter.rs  client_ident.rs  cts_state_machine.rs  lib.rs  message_logger.rs  message_state_machine.rs  transport.rs  view_model_event_handle.rs
esp32-app/: Cargo.toml  deploy-esp32.sh  deploy-esp32c3.sh  lv_conf.h  sdkconfig.defaults
esp32-app/.cargo/: config.toml
esp32-app/src/: backlight_control.rs  display_factory.rs  esp32c3_devkit_m.rs  esp_status_printer.rs  esp_uart_transport.rs  esp_ws2812_driver.rs  lib.rs  membrane_switch.rs  status_led.rs  ui_device.rs  wifi.rs
mock-mainboard-esp/: .gitignore  Cargo.toml  highlow-test.sh
mock-mainboard-esp/src/: main.rs
mock-mainboard-lib/: Cargo.toml  README.md
mock-mainboard-lib/src/: channel_manager.rs  channel_tracker.rs  clear_to_send_tracker.rs  lib.rs  main_board.rs  message_logger.rs  mock_spa.rs  timer_tracker.rs
mock-mainboard-lib/tests/: mainboard_message_tests.rs  mainboard_with_esp8266_spa_tests.rs
mock-topside-panel-app/: Cargo.toml
mock-topside-panel-app/src/: args.rs  main.rs  mock_wifi_manager.rs  peer_deadend.rs  peer_mock_spa.rs  peer_runner.rs  simulator_window.rs
src/: echo_server.rs  esp_uart_transport.rs  main.rs  uart_transport.rs  wifi.rs
src/protocol/: message.rs  message_types.rs  mod.rs  temperature.rs
test-esp8266_spa-app/: Cargo.toml  README.md  build.rs
test-esp8266_spa-app/src/: esp8266_spa.cpp  main.rs
test-esp8266_spa-app/tests/: mainboard_with_esp8266_spa_tests.rs
topside-panel-esp/: .gitignore  Cargo.toml
topside-panel-esp/src/: esp_uart_transport.rs  main.rs
topside-panel-lib/: Cargo.toml  README.md  lv_conf.h
topside-panel-lib/src/: app_state.rs  channel_filter.rs  client_ident.rs  cts_state_machine.rs  handling_error.rs  lib.rs  main_screen.rs  message_state_machine.rs  temperature_model.rs  topside_panel.rs  topside_state_machine.rs  ui_handler.rs  view_model.rs
topside-panel-lib/src/app/: mod.rs  status_printer.rs  topside_panel_app.rs
topside-panel-lib/src/model/: button.rs  key_event.rs  mod.rs  temperature_model.rs  view_model.rs  view_model_event_handle.rs
topside-panel-lib/src/network/: app_state.rs  cts_state_machine.rs  message_state_machine.rs  mod.rs  topside_panel.rs  topside_panel_client.rs  topside_state_machine.rs
topside-panel-lib/src/view/: backlight_manager.rs  color_util.rs  font.rs  lcd_device.rs  loading_screen.rs  lvgl_ext.rs  main_screen.rs  mod.rs  palette.rs  palette_styles.rs  provisioning_screen.rs  qr_code_widget.rs  screen_flipper.rs  temperature_widget.rs  ui_handler.rs  user_input_event.rs  window_proxy.rs
topside-panel-lib/tests/: mainboard_with_topside_tests.rs
wifi-module-lib/: Cargo.toml  README.md
wifi-module-lib/src/: advertisement.rs  app_state.rs  broadcaster.rs  command.rs  discovery_handler.rs  event.rs  handling_error.rs  lib.rs  relay_event.rs  tcp_handler.rs  view_model.rs  wifi_handler.rs  wifi_manager.rs  wifi_module.rs  wifi_module_client.rs  wifi_state_machine.rs
