[package]
name = "balboa-spa-controller"
version = "0.1.0"
authors = ["jasta <jasta@devtcg.org>"]
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
pio = ["esp-idf-sys/pio"]

[dependencies]
esp-idf-sys = { version = "0.32.0", features = ["binstart"] }
esp-idf-svc = "0.45.0"
esp-idf-hal = "0.40.0"
embedded-svc = "0.24.0"
embedded-hal = "0.2.7"
log = "0.4.17"
anyhow = "1"
thiserror = "1.0.38"
balboa-spa-protocol = { path = "./balboa-spa-protocol" }
nb = "1.0.0"

[build-dependencies]
embuild = "0.31.0"
anyhow = "1"
