[workspace]
members = [
  "balboa-spa-messages",
  "test-esp8266_spa-app",
  "mock-mainboard-lib",
]
exclude = [
  # Note that we exclude the ESP app as esp-idf-svc/hal have a lot of funky
  # unconventional build rules that don't mesh very well with everything else.
  # Build and test that stuff entirely manually and separate, but move
  # all of the interesting logic into the other crates.
  "mock-mainboard-esp",
  "topside-panel-esp",
]
