[workspace]
members = [
  "balboa-spa-messages",
  "balboa-tools",
  "common-lib",
  "mock-mainboard-lib",
  "mock-topside-panel-app",
  "test-esp8266_spa-app",
  "topside-panel-lib",
  "wifi-module-lib",
]
exclude = [
  # Note that we exclude the ESP app as esp-idf-svc/hal have a lot of funky
  # unconventional build rules that don't mesh very well with everything else.
  # Build and test that stuff entirely manually and separate, but move
  # all of the interesting logic into the other crates.
  "esp32-app",
]

[profile.release]
panic = 'abort'

[profile.dev]
panic = 'abort'
