[package]
name = "balboa-spa-protocol"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.17"
anyhow = "1"
thiserror = "1"
timer = { git = "https://github.com/Yoric/timer.rs" }
chrono = { version = "0.4.23", default-features = false, features = ["std"] }
bimap = "0.6.2"
balboa-spa-messages = { path = "../balboa-spa-messages" }

[dev-dependencies]
env_logger = "0.10.0"
pipe = "0.4.0"