[package]
name = "common-lib"
version = "0.0.0"
edition = "2021"

[dependencies]
log = "0.4.17"
anyhow = "1"
thiserror = "1"
balboa-spa-messages = { path = "../balboa-spa-messages" }
bus = "2.3.0"
num-traits = "0.2.15"

[dev-dependencies]
env_logger = "0.10.0"
pipe = "0.4.0"
byteorder = "1.4.3"
crossbeam = "0.8.2"
ntest = "0.9.0"