[package]
name = "esp-app"
version = "0.0.0"
authors = ["jasta <jasta@devtcg.org>"]
edition = "2021"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
pio = ["esp-idf-sys/pio"]

[dependencies]
esp-idf-sys = { version = "0.32.0", features = ["binstart"] }
esp-idf-svc = "0.45.0"
esp-idf-hal = "0.40.0"
embedded-svc = "0.24.0"
embedded-hal = "0.2.7"
log = "0.4.17"
anyhow = "1"
thiserror = "1.0.38"
balboa-spa-messages = { path = "../balboa-spa-messages" }
mock-mainboard-lib = { path = "../mock-mainboard-lib" }
topside-panel-lib = { path = "../topside-panel-lib" }
wifi-module-lib = { path = "../wifi-module-lib" }
nb = "1.0.0"
ws2812-esp32-rmt-driver = "0.5.0"
smart-leds = "0.3.0"
num-traits = "0.2.15"
mipidsi = "0.6.0"
display-interface-spi = "0.4.1"
embedded-graphics = "0.7.1"
debounced-pin = "0.3.0"

[build-dependencies]
embuild = "0.31.0"
anyhow = "1"
