[package]
name = "esp-app"
version = "0.0.0"
authors = ["jasta <jasta@devtcg.org>"]
edition = "2021"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[package.metadata.esp-idf-sys]
esp_idf_repository = "https://github.com/jasta/esp-idf"
esp_idf_version = "branch:dpp_fix_v5.0.1"

[patch.crates-io]
esp-idf-sys = { git = "https://github.com/esp-rs/esp-idf-sys" }
#esp-idf-svc = { path = "/home/jasta/software/esp-idf-svc" }
esp-idf-svc = { git = "https://github.com/jasta/esp-idf-svc", branch = "esp_dpp" }
lvgl = { path = "/home/jasta/software/lvgl-rs/lvgl" }
lvgl-sys = { path = "/home/jasta/software/lvgl-rs/lvgl-sys" }
lvgl-codegen = { path = "/home/jasta/software/lvgl-rs/lvgl-codegen" }

[dependencies]
esp-idf-sys = { version = "0.32.1", features = ["binstart"] }
esp-idf-svc = "0.45.0"
esp-idf-hal = { version = "0.40.1", features = [ "edge-executor" ] }
embedded-svc = "0.24.0"
embedded-hal = "0.2.7"
log = "0.4.17"
anyhow = "1"
thiserror = "1.0.38"
balboa-spa-messages = { path = "../balboa-spa-messages" }
common-lib = { path = "../common-lib" }
mock-mainboard-lib = { path = "../mock-mainboard-lib" }
topside-panel-lib = { path = "../topside-panel-lib" }
wifi-module-lib = { path = "../wifi-module-lib" }
nb = "1.0.0"
ws2812-esp32-rmt-driver = "0.5.0"
smart-leds = "0.3.0"
num-traits = "0.2.15"
mipidsi = "0.6.0"
display-interface-spi = "0.4.1"
embedded-graphics = "0.7.1"
debounced-pin = "0.3.0"
edge-executor = "0.3.0"
heapless = "0.7.16"

[build-dependencies]
embuild = "0.31.0"
anyhow = "1"
