[package]
name = "topside-panel-lib"
version = "0.0.0"
edition = "2021"

[dependencies]
log = "0.4.17"
anyhow = "1"
thiserror = "1"
balboa-spa-messages = { path = "../balboa-spa-messages" }
common-lib = { path = "../common-lib" }
wifi-module-lib = { path = "../wifi-module-lib" }
measurements = "0.11.0"
embedded-graphics = "0.7.1"
lvgl = "0.5.2"
lvgl-sys = "0.5.2"
lvgl-codegen = "0.5.2"
cstr_core = "0.2.6"
cty = "0.2.1"
num-traits = "0.2.15"
qrcodegen = "1.8.0"
async-io = "1.12.0"

[dev-dependencies]
env_logger = "0.10.0"
ntest = "0.9.0"
mock-mainboard-lib = { path = "../mock-mainboard-lib" }
pipe = "0.4.0"
